--- a/dev/css/index.css
+++ b/dev/css/index.css
@@ -1,6 +1,28 @@
 body {
   margin: 0px;
   background-color: #f0ecd8;
+  font-family: 'Quicksand', Arial, serif;
+}
+
+/*Bootstrap classes*/
+
+.navbar{
+	border-radius: 0px;
+}
+.navbar-header{
+	font-size: 18px;
+	font-weight: 800;
+}
+
+.navbar-default{
+	border: none;
+}
+
+/*Message Main Styles*/
+#location{
+	color: #9A3234;
+	font-weight: 800;
+	font-size: 20px;
 }
 
 .GeoTextTitle {
@@ -13,5 +35,51 @@ body {
 
 .content {
   margin: 0 auto;
-  width: 50%;
+  width: 75%;
+}
+
+#location_name{
+	font-size: 18px;
+}
+.message_container{
+	margin-top: 20px;
+	margin-bottom: 20px;
+	padding: 20px 30px;
+	height: 100%;
+	background-color: white;
+}
+.message_photo{
+	margin-top: 20px;
+}
+.sender_name{
+	font-weight: 800;
+	font-size: 16px;
+}
+/*Sticky footer*/
+* {
+	margin: 0;
+}
+html, body {
+	height: 100%;
+}
+.wrapper {
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	margin: 0 auto -50px; /* the bottom margin is the negative value of the footer's height */
+}
+
+.footer, .push {
+	height: 50px;
+}
+
+.footer{
+	background-color: black;
+}
+
+.footer_text{
+	color: white;
+	position: absolute;
+	margin: 8px;
+	bottom: 0;
 }
