--- a/dev/css/index.css
+++ b/dev/css/index.css
@@ -55,6 +55,11 @@ body {
 	font-weight: 800;
 	font-size: 16px;
 }
+
+/*Button Styles*/
+.btn-ttc:active{
+	color: #9A3234;
+}
 /*Sticky footer*/
 * {
 	margin: 0;
