--- a/dev/css/index.css
+++ b/dev/css/index.css
@@ -58,6 +58,9 @@ hr {
 	height: 100%;
 	background-color: white;
 	border-left: 5px solid red;
+	-webkit-box-shadow: 2px 2px 10px 0px rgba(50, 50, 50, 0.25);
+	-moz-box-shadow:    2px 2px 10px 0px rgba(50, 50, 50, 0.25);
+	box-shadow:         2px 2px 10px 0px rgba(50, 50, 50, 0.25);
 }
 .message_photo{
 	margin-top: 20px;
@@ -81,7 +84,7 @@ hr {
 }
 .list_container{
 	margin-top: 20px;
-	margin-bottom: 5px;
+	margin-bottom: 8px;
 	display: inline-block;
 	margin-left: 30px;
 }
